body overflow fixed

--- a/public/css/for_homepage.css
+++ b/public/css/for_homepage.css
@@ -5,7 +5,7 @@ html{
 * {margin: 0; padding: 0; box-sizing: border-box; }
 
 body{
-    overflow: hidden;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .container-1{
@@ -38,7 +38,7 @@ body{
     width: 85%;
     height: 100%;
     transition: width 1s;
-    animation: anim 0.5s linear;
+    animation: anim 0.2s linear;
 }
 @keyframes anim{
     from {
